Add: main content of the page

--- a/index.html
+++ b/index.html
@@ -24,5 +24,89 @@
         </li>
       </ul>
     </header>
+    <main>
+      <div>
+        <h1>
+          ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
+          ДЛЯ ВАШЕГО БИЗНЕСА
+        </h1>
+        <button type="button">Заказать услугу</button>
+      </div>
+      <div>
+        <ul>
+          <li>
+            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <p>
+              Идейные соображения, а также <br />
+              начало повседневной работы <br />
+              по формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНОСТЬ</h3>
+            <p>
+              Задача организации, в особенности <br />
+              же рамки и место обучения кадров <br />
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>ПЛАНИРОВАНИЕ</h3>
+            <p>
+              Равным образом консультация с <br />
+              широким активом в значительной <br />
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <p>
+              Значимость этих проблем настолько <br />
+              очевидна, что реализация плановых <br />
+              заданий.
+            </p>
+          </li>
+        </ul>
+      </div>
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img src="images/activity1.jpg" alt="development" />
+          </li>
+          <li>
+            <img src="images/activity2.jpg" alt="adapting for mobile" />
+          </li>
+          <li>
+            <img src="images/activity3.jpg" alt="designing" />
+          </li>
+        </ul>
+      </section>
+      <section class="team">
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="images/employee1.jpg" alt="product designer" />
+            <p>Игорь Демьяненко</p>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/employee2.jpg" alt="frontend developer" />
+            <p>Ольга Репина</p>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="images/employee3.jpg" alt="marketing" />
+            <p>Николай Тарасов</p>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/employee4.jpg" alt="ui designer" />
+            <p>Михаил Ермаков</p>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
