--- a/index.html
+++ b/index.html
@@ -108,5 +108,13 @@
         </ul>
       </section>
     </main>
+    <footer>
+      <a href="/"><span>Web</span>Studio</a>
+      <address>
+        г. Киев, пр-т Леси Украинки, 26<br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </address>
+    </footer>
   </body>
 </html>
