--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
   </head>
@@ -16,18 +16,14 @@
         </ul>
       </nav>
       <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <div>
         <h1>
-          ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
+          ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>
           ДЛЯ ВАШЕГО БИЗНЕСА
         </h1>
         <button type="button">Заказать услугу</button>
@@ -37,32 +33,32 @@
           <li>
             <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
             <p>
-              Идейные соображения, а также <br />
-              начало повседневной работы <br />
+              Идейные соображения, а также<br>
+              начало повседневной работы<br>
               по формированию позиции.
             </p>
           </li>
           <li>
             <h3>ПУНКТУАЛЬНОСТЬ</h3>
             <p>
-              Задача организации, в особенности <br />
-              же рамки и место обучения кадров <br />
+              Задача организации, в особенности<br>
+              же рамки и место обучения кадров<br>
               влечет за собой.
             </p>
           </li>
           <li>
             <h3>ПЛАНИРОВАНИЕ</h3>
             <p>
-              Равным образом консультация с <br />
-              широким активом в значительной <br />
+              Равным образом консультация с<br>
+              широким активом в значительной<br>
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
             <p>
-              Значимость этих проблем настолько <br />
-              очевидна, что реализация плановых <br />
+              Значимость этих проблем настолько<br>
+              очевидна, что реализация плановых<br>
               заданий.
             </p>
           </li>
@@ -71,37 +67,31 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li>
-            <img src="images/activity1.jpg" alt="development" />
-          </li>
-          <li>
-            <img src="images/activity2.jpg" alt="adapting for mobile" />
-          </li>
-          <li>
-            <img src="images/activity3.jpg" alt="designing" />
-          </li>
+          <li><img src="images/activity1.jpg" alt="development" width="370"></li>
+          <li><img src="images/activity2.jpg" alt="adapting for mobile" width="370"></li>
+          <li><img src="images/activity3.jpg" alt="designing" width="370"></li>
         </ul>
       </section>
-      <section class="team">
+      <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="images/employee1.jpg" alt="product designer" />
+            <img src="images/employee1.jpg" alt="product designer" width="270">
             <p>Игорь Демьяненко</p>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/employee2.jpg" alt="frontend developer" />
+            <img src="images/employee2.jpg" alt="frontend developer" width="270">
             <p>Ольга Репина</p>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/employee3.jpg" alt="marketing" />
+            <img src="images/employee3.jpg" alt="marketing" width="270">
             <p>Николай Тарасов</p>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/employee4.jpg" alt="ui designer" />
+            <img src="images/employee4.jpg" alt="ui designer" width="270">
             <p>Михаил Ермаков</p>
             <p>UI Designer</p>
           </li>
@@ -111,8 +101,8 @@
     <footer>
       <a href="/"><span>Web</span>Studio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26<br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+        г. Киев, пр-т Леси Украинки, 26<br>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
