--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
   </head>
   <body>
@@ -10,9 +10,9 @@
       <a href="/"><span>Web</span>Studio</a>
       <nav>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul>
@@ -21,17 +21,14 @@
       </ul>
     </header>
     <main>
-      <div>
-        <h1>
-          ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>
-          ДЛЯ ВАШЕГО БИЗНЕСА
-        </h1>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
-      </div>
-      <div>
+      </section>
+      <section>
         <ul>
           <li>
-            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также<br>
               начало повседневной работы<br>
@@ -39,7 +36,7 @@
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНОСТЬ</h3>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности<br>
               же рамки и место обучения кадров<br>
@@ -47,7 +44,7 @@
             </p>
           </li>
           <li>
-            <h3>ПЛАНИРОВАНИЕ</h3>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с<br>
               широким активом в значительной<br>
@@ -55,7 +52,7 @@
             </p>
           </li>
           <li>
-            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько<br>
               очевидна, что реализация плановых<br>
@@ -63,7 +60,7 @@
             </p>
           </li>
         </ul>
-      </div>
+      </section>
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
@@ -77,22 +74,22 @@
         <ul>
           <li>
             <img src="images/employee1.jpg" alt="product designer" width="270">
-            <p>Игорь Демьяненко</p>
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="images/employee2.jpg" alt="frontend developer" width="270">
-            <p>Ольга Репина</p>
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="images/employee3.jpg" alt="marketing" width="270">
-            <p>Николай Тарасов</p>
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="images/employee4.jpg" alt="ui designer" width="270">
-            <p>Михаил Ермаков</p>
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -101,9 +98,23 @@
     <footer>
       <a href="/"><span>Web</span>Studio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26<br>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/Hkc4BScaAdS2Snyz6"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
